# azure-devops-iteration-report

./: .env.example  .gitignore  README.md  assemble.py  client.py  main.py  pyproject.toml
